classDiagram
    direction LR

    class Command {
      <<interface>>
      +execute()
      +undo()
    }

    class Light {
      +on()
      +off()
    }

    class Fan {
      +on()
      +off()
    }

    class LightCommand {
      -Light* light
      +LightCommand(Light* l)
      +execute()
      +undo()
    }

    class FanCommand {
      -Fan* fan
      +FanCommand(Fan* f)
      +execute()
      +undo()
    }

    class RemoteController {
      -vector~vector~Command*~~ buttons
      -vector~vector~bool~~ buttonPressed
      +RemoteController(int rows, int cols)
      +setCommand(int row, int col, Command* cmd)
      +pressButton(int row, int col)
      +~RemoteController()
    }

    Command <|.. LightCommand
    Command <|.. FanCommand
    LightCommand --> Light : receiver
    FanCommand --> Fan : receiver
    RemoteController --> Command : stores/executes
